# dtest

./: README.md  __init__.py  _dtest.py  conftest.py  dtest.py  pyproject.toml  pytest.ini  requirements.txt  test.py
dtest/: __init__.py  _config.py  _dtest.py  _entry.py
