[project]
name = "dtest"
version = "0.0.0"
dependencies = [
    "pytest>=6.0",
    "torch>=2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.entry-points."pytest11"]
dtest = "dtest._config"

[tool.setuptools.packages.find]
where = ["."]
include = ["dtest*"]

